--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
     </div>
 
     <div class="container-fluid" id="top-section">
-      <h2 id="heading">A modern way to build websites.</h2>
+      <h2 id="heading">Leo a nulla posuere pretium integer.</h2>
       <p id="sub-heading">
-        Empower designers to build professional, custom websites in a completely
-        visual canvas with no code.
+        Dignissim amet et maecenas interdum metus et. Nisi laoreet at convallis interdum.
       </p>
       <button class="btn" type="button" id="start-btn">Start free trial</button>
     </div>
